--- a/learn/linear-regression/LM-BOSTON.ipynb
+++ b/learn/linear-regression/LM-BOSTON.ipynb
@@ -567,7 +567,7 @@
         "## Exercises\n",
         "\n",
         "\n",
-        "1.   apply the data scaling (hint: https://scikit-learn.org/stable/modules/preprocessing.html)\n",
+        "1.   apply feature scaling (hint: https://scikit-learn.org/stable/modules/preprocessing.html)\n",
         "2.   work with 5-fold cross-validation  (hint: https://scikit-learn.org/stable/modules/generated/sklearn.model_selection.KFold.html)\n",
         "3.   evaluate using RMSE\n",
         "\n"
