--- a/learn/data-engineering/quick_pandas_tutoiral.ipynb
+++ b/learn/data-engineering/quick_pandas_tutoiral.ipynb
@@ -6,8 +6,7 @@
       "name": "quick-pandas-tutoiral.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyN1/XWUMOCw8FDLWADVDeYW",
-      "include_colab_link": true
+      "authorship_tag": "ABX9TyN1/XWUMOCw8FDLWADVDeYW"
     },
     "kernelspec": {
       "name": "python3",
@@ -15,16 +14,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/Rathachai/DA101/blob/gh-pages/learn/data-engineering/quick_pandas_tutoiral.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "markdown",
       "metadata": {
